<resources>
    <string name="app_name">FieldDiary</string>
    <string name="sign_up_message">cadastre_se</string>
    <string name="welcome_message">Bem vindo!</string>
    <string name="email_hint">email</string>
    <string name="password_hint">senha</string>
    <string name="sign_in_message">entrar</string>
    <string name="forgot_password_message">esqueceu sua senha?</string>
</resources>
